<resources>
    <string name="app_name">The Game DB</string>
    <string name="goButton">Go</string>
    <string name="gameDets">Game Details</string>
    <string name="OverView">Overview:</string>
    <string name="fin">Finish</string>
    <string name="sim">Similar Games</string>
    <string name="play">Play Trailer</string>
    <string name="genre">Genre: </string>
    <string name="pub">Publisher: </string>
    <string name="searchButton">Search</string>
    <string name="noResultsTextView">No results found</string>
    <string name="similarGames">Similar games to </string>
    <string name="loading">Loading</string>
    <string name="copyright">&#169; Trailer</string>
</resources>
