<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_similar_games"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joyrasmussen.hw5_group34.SimilarGames">

    <TextView
        android:text="game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/title" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="?attr/actionBarItemBackground"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/image"
        android:maxHeight="200dp"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/OverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="5dp"
        android:id="@+id/overView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overView"
        android:id="@+id/scrollLayoutHolder"
        android:layout_above="@+id/genre">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/overView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/overviewText" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre"
        android:layout_above="@+id/publisher" />

    <Button
        android:text="@string/fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/finishButton"
        android:ems="10" />

    <Button
        android:text="@string/sim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/similarButton"
        android:allowUndo="true"
        android:layout_above="@+id/finishButton"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:text="@string/pub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trailerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/publisher"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trailerButton"
        android:layout_above="@+id/similarButton"
        android:layout_centerHorizontal="true"
        android:ems="10" />

</RelativeLayout>
