<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joyrasmussen.hw5_group34.GameDetailsActivity">

    <TextView
        android:text="game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/title"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="?attr/actionBarItemBackground"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/image"
        android:maxHeight="200dp"
        android:layout_height="100dp"
        android:visibility="invisible" />

    <TextView
        android:text="@string/OverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="5dp"
        android:id="@+id/overView"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overView"
        android:id="@+id/scrollLayoutHolder"
        android:layout_above="@+id/genre">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/overView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/overviewText"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre"
        android:layout_above="@+id/publisher"
        android:visibility="invisible"
        android:editable="true" />

    <Button
        android:text="@string/fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/finishButton"
        android:ems="10"
        android:enabled="false" />

    <Button
        android:text="@string/sim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/similarButton"
        android:allowUndo="true"
        android:layout_above="@+id/finishButton"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:enabled="false" />

    <TextView
        android:text="@string/pub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trailerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/publisher"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:editable="true" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trailerButton"
        android:layout_above="@+id/similarButton"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:onClick="playTrailer"
        android:enabled="false" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingProgress"
        android:layout_alignTop="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />

    <TextView
        android:text="loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/loadingText" />

</RelativeLayout>
